--- a/templates/final_comparison.html
+++ b/templates/final_comparison.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <style>
+
       body {
         background-image: url('https://m.foolcdn.com/media/millionacres/original_images/real_estate_trends.jpg?crop=4:3,smart');
       }
@@ -83,7 +84,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     <div style = "text-align:center">
-      <a href="/"><button>Back</button></a>
+      <a href="/next"><button>Back</button></a>
     </div>
 </body>
 </html>
