--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!--Code by Divinector (www.divinectorweb.com)-->
+
 <html lang="en">
 <head>
     <style>
@@ -106,7 +106,7 @@
 
     </style>
     <meta charset="UTF-8">
-    <title>How to Create responsive Homepage</title>
+    <title>Real Estate Analysis</title>
 
 </head>
 <body>
