--- a/templates/view_temp.html
+++ b/templates/view_temp.html
@@ -1,17 +1,15 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" xmlns="http://www.w3.org/1999/html">
   <head>
-    <!-- <style>
-      body {
-        background-image: url('https://www.mashvisor.com/blog/wp-content/uploads/2018/12/bigstock-Real-Estate-Business-Investmen-270915502.jpg');
-      }
-      </style> -->
+
       <style>
 
         body {
           background-image: url('https://m.foolcdn.com/media/millionacres/original_images/real_estate_trends.jpg?crop=4:3,smart');
         }
         </style>
+
+<!--         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>-->
     
     
     <!-- Required meta tags -->
@@ -25,6 +23,7 @@
 
   </head>
   <body >
+  <header>
 
     <h2 class = "h2" style = "text-align:center; margin-top:0.5%;margin-bottom:0.5%; padding:10px;color: rgb(160, 185, 19);">Real Estate Trend Visualization</h2>
    
@@ -76,10 +75,10 @@
       <input type="radio"  name="Choice" value="Rental price Vs Area(Square foot)"><br>
       <label >Rental Price per Square foot</label><br>
 
-<!--        <input type="radio"  name="Choice" value="New Choice"><br>-->
-<!--      <label >Select New Choice</label><br>-->
 
         <div style = "text-align:center">
+<!--         <p><button type="submit" name="btn-submit" id="btn-submit" disabled="disabled">Submit</button></p>-->
+            <!-- <p><button type="submit" name="btn-submit" id="btn-submit" >Submit</button></p> -->
 <p><input type = "submit" value = "Submit" /></p>
 </div>          
 </form>
@@ -118,5 +117,6 @@
     <div style = "text-align:center">
       <a href="/final"><button>Next</button></a>
     </div>
+  </header>
   </body>
 </html>
